--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
-.main{
+.boss{
     display: flex;
-    gap: 30px;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.comments{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
 }
